test/libyul/yulSyntaxTests/number_literals_4.yul
contract C {
    function f() pure external {
        assembly {
            let x := 67.235
        }
    }
}
// ----
// ParserError 4828: (86-92): Invalid number literal.
